--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "lucide-react": "^0.473.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^7.1.3",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.4",
@@ -28,12 +31,15 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^5.1.3",
     "jsdom": "^23.2.0",
+    "postcss": "^8.5.1",
     "prettier": "^3.2.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
     "vitest": "^1.2.0"
