--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "lucide-react": "^0.473.0",
+    "motion": "^12.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^7.1.3",
     "swiper": "^11.2.1"
