--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.473.0",
     "motion": "^12.0.5",
     "react": "^18.2.0",
@@ -23,7 +24,8 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^7.1.3",
-    "swiper": "^11.2.1"
+    "swiper": "^11.2.1",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.4",
