--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "@reduxjs/toolkit": "^2.0.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.473.0",
